[gd_scene load_steps=4 format=3 uid="uid://dgvxwdgef3q8s"]

[ext_resource type="Script" uid="uid://bhg43w0ltj0wj" path="res://BattleScene/BattleScene.gd" id="1_0fuey"]
[ext_resource type="Texture2D" uid="uid://cgervusv03gw" path="res://assets/fake1.png" id="2_6nrqt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_phlvo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6nrqt")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_0fuey")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(720, 480)
offset_right = 720.0
offset_bottom = 480.0

[node name="PlayerAvatar" type="TextureRect" parent="."]
offset_left = 64.0
offset_top = 362.0
offset_right = 133.0
offset_bottom = 402.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerAvatar"]
position = Vector2(47, -230)
scale = Vector2(0.0953796, 0.0959971)
sprite_frames = SubResource("SpriteFrames_phlvo")
animation = &"new_animation"

[node name="OpponentAvatar" type="TextureRect" parent="."]
offset_left = 77.0
offset_top = 70.0
offset_right = 117.0
offset_bottom = 110.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="OpponentAvatar"]
position = Vector2(536, 65)
scale = Vector2(0.098864, 0.100356)
sprite_frames = SubResource("SpriteFrames_phlvo")
animation = &"new_animation"

[node name="ImageDisplay" type="TextureRect" parent="."]
offset_left = 169.0
offset_top = 98.0
offset_right = 553.0
offset_bottom = 310.0

[node name="RealButton" type="Button" parent="."]
offset_left = 209.0
offset_top = 321.0
offset_right = 323.0
offset_bottom = 407.0
text = "real"

[node name="FakeButton" type="Button" parent="."]
offset_left = 412.0
offset_top = 326.0
offset_right = 510.0
offset_bottom = 411.0
text = "fake"

[node name="FeedbackLabel" type="Label" parent="."]
visible = false
offset_left = 172.0
offset_top = 156.0
offset_right = 40.0
offset_bottom = 23.0

[node name="Label" type="Label" parent="."]
offset_left = 138.0
offset_top = 194.0
offset_right = 1576.0
offset_bottom = 403.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "Battle time !!
"

[node name="Button" type="Button" parent="."]
offset_left = 1265.0
offset_top = 871.0
offset_right = 1439.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 30
text = "Run away"

[node name="PlayerHP" type="ProgressBar" parent="."]
offset_left = 25.0
offset_top = 19.0
offset_right = 209.0
offset_bottom = 46.0

[node name="OpponentHP" type="ProgressBar" parent="."]
offset_left = 519.0
offset_top = 19.0
offset_right = 703.0
offset_bottom = 46.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
